@@ -1,3 +1,6 @@
+* "s.info ^number" prints more informations.
+* fixed problem with locales, that have decimal point different than dot. 
+  Now LC_NUMERIC variable is ignored. (Vincent Favre-Nicolin)
 * new configure flags: --enable-debug and --enable-release 
 * ambigous 'log(2)' in "export as function" was replaced by numeric value
   (in gnuplot log means natural log, in Excel log=log10). 
